# multiplication-circle

./: .gitignore  README.md  hie.yaml  multiplication-circle.cabal  stack.yaml
app/: Main.hs
src/: Main.hs
