name:          multiplication-circle
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

executable multiplication-circle
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -O2
    build-depends:
        base >= 4.7 && < 5
      , multiplication-circle
      , gloss
      , mtl

library
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-depends:
        base >= 4.7 && < 5
      , gloss
    exposed-modules: